# SpaceIn3d

./: .gitignore  Actor.hs  Animate.hs  Canon.hs  Collision.hs  Data.hs  Fly.hs  GameLoop.hs  Input.hs  LICENSE  Move.hs  Music.hs  README.md  Screen.hs  Status.hs  Switch.hs  build.bat  game.cabal  game.hs  run  run.bat  stack.yaml
Media/Music/: readme.txt
